--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,8 @@
 .notice-background {
   background-size: cover;
   background-position: center;
-  height: 30vh;
+  display: flex;
+  flex-direction: column;
   background-image: linear-gradient(
       to top,
       rgba(0, 0, 0, 0.5),
