--- a/src/App.css
+++ b/src/App.css
@@ -14,3 +14,20 @@
 .max-w-full-screen {
   max-width: 100vw;
 }
+
+@keyframes add-item {
+  0% {
+    transform: scale(1);
+  }
+  50% {
+    transform: scale(1.3) translate(0%, -30%);
+  }
+  100% {
+    transform: scale(1);
+  }
+}
+
+.add-item-animation {
+  animation-name: add-item;
+  animation-duration: 0.2s;
+}
