Updated with addphoto and delete photo

--- a/src/App.css
+++ b/src/App.css
@@ -40,3 +40,10 @@ html {
   min-width: 300px;
   min-height: 300px;
 }
+
+.table-cell {
+  max-width: 200px;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
